<?xml version='1.0' encoding='UTF-8'?>
<project xsi:schemaLocation='http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd' xmlns='http://maven.apache.org/POM/4.0.0' xmlns:xsi='http://www.w3.org/2001/XMLSchema-instance'>

    <modelVersion>4.0.0</modelVersion>

    <version>1.0.80-SNAPSHOT</version>
    <groupId>com.twilio</groupId>
    <artifactId>kudu-sql</artifactId>
    <name>SQL parsing, optimization and execution for Apache Kudu</name>
    <packaging>pom</packaging>

    <description>
        Provides an Apache Calcite Adapter for Apache Kudu enabling services to query Apache Kudu
        with SQL.
    </description>

    <url>https://github.com/twilio/calcite-kudu</url>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
            <comments>A business-friendly OSS license</comments>
        </license>
    </licenses>

    <organization>
        <name>com.twilio</name>
        <url>https://github.com/twilio/calcite-kudu</url>
    </organization>

    <scm>
        <url>https://github.com/twilio/calcite-kudu</url>
        <connection>scm:git@github.com:twilio/calcite-kudu.git</connection>
    </scm>

    <developers>
        <developer>
            <id>sdreynolds</id>
            <name>Scott Reynolds</name>
            <email>sdrreynolds@gmail.com</email>
        </developer>
        <developer>
            <id>twdsilva</id>
            <name>Thomas D'Silva</name>
            <email>tdsilva@apache.org</email>
        </developer>
    </developers>

    <modules>
        <module>adapter</module>
        <module>cli</module>
    </modules>

    <properties>
        <kudu.version>1.16.0</kudu.version>
        <!-- If https://issues.apache.org/jira/browse/CALCITE-5226 is resolved
             remove the commons-dpcp2 in dependency management -->
        <calcite.version>1.34.0</calcite.version>
        <guava.version>32.1.3-jre</guava.version>
        <junit.version>4.13.2</junit.version>
        <slf4j.version>1.7.21</slf4j.version>
        <log4j.version>2.17.1</log4j.version>
        <mockito.version>4.6.1</mockito.version>
        <spotless.version>2.41.1</spotless.version>
        <freemarker-version>2.3.30</freemarker-version>
        <json-version>20231013</json-version>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>17</java.version>
        <jdk.version>17</jdk.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>

        <main.basedir>${maven.multiModuleProjectDirectory}</main.basedir>

        <gpg.passphrase>${env.PGP_PASS}</gpg.passphrase>

    </properties>

    <profiles>
        <profile>
            <id>release</id>
            <distributionManagement>
                <repository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
                </repository>
                <snapshotRepository>
                    <id>ossrh</id>
                    <url>https://oss.sonatype.org/content/repositories/snapshots</url>
                </snapshotRepository>
            </distributionManagement>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.sonatype.plugins</groupId>
                        <artifactId>nexus-staging-maven-plugin</artifactId>
                        <version>1.6.13</version>
                        <extensions>true</extensions>
                        <configuration>
                            <serverId>ossrh</serverId>
                            <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                            <autoReleaseAfterClose>true</autoReleaseAfterClose>
                            <stagingProgressTimeoutMinutes>20</stagingProgressTimeoutMinutes>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.kohsuke</groupId>
                        <artifactId>pgp-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <dependencyManagement>
        <dependencies>

            <dependency>
                <artifactId>kudu-sql-adapter</artifactId>
                <groupId>com.twilio</groupId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.kudu</groupId>
                <artifactId>kudu-client</artifactId>
                <version>${kudu.version}</version>
            </dependency>

            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>1.15</version>
            </dependency>

            <dependency>
                <groupId>org.apache.calcite</groupId>
                <artifactId>calcite-core</artifactId>
                <version>${calcite.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Testing dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <scope>test</scope>
                <version>${junit.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.kudu</groupId>
                <artifactId>kudu-test-utils</artifactId>
                <version>${kudu.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.kudu</groupId>
                <artifactId>kudu-binary</artifactId>
                <classifier>${os.detected.classifier}</classifier>
                <scope>test</scope>
                <version>${kudu.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
              <groupId>org.apache.logging.log4j</groupId>
              <artifactId>log4j-slf4j-impl</artifactId>
              <version>${log4j.version}</version>
              <scope>test</scope>
            </dependency>
            <dependency>
              <groupId>org.mockito</groupId>
              <artifactId>mockito-core</artifactId>
              <version>${mockito.version}</version>
              <scope>test</scope>
            </dependency>
            <dependency>
              <groupId>org.mockito</groupId>
              <artifactId>mockito-inline</artifactId>
              <version>${mockito.version}</version>
              <scope>test</scope>
            </dependency>
            <dependency>
                <artifactId>freemarker</artifactId>
                <groupId>org.freemarker</groupId>
                <version>${freemarker-version}</version>
            </dependency>
            <dependency>
                <groupId>org.json</groupId>
                <artifactId>json</artifactId>
                <version>${json-version}</version>
            </dependency>

            <!--Calcite fix: https://issues.apache.org/jira/browse/CALCITE-5226
                https://ossindex.sonatype.org/vulnerability/sonatype-2020-1349?component-type=maven&component-name=org.apache.commons%2Fcommons-dbcp2&utm_source=ossindex-client&utm_medium=integration&utm_content=1.7.0
                 https://ossindex.sonatype.org/vulnerability/sonatype-2020-0460?component-type=maven&component-name=org.apache.commons%2Fcommons-dbcp2&utm_source=ossindex-client&utm_medium=integration&utm_content=1.7.0
                 -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-dbcp2</artifactId>
                <version>2.11.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <build>
        <extensions>
            <!-- Used to find the right kudu-binary artifact with the Maven
                 property ${os.detected.classifier} -->
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>1.6.2</version>
            </extension>
        </extensions>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <forceJavacCompilerUse>true</forceJavacCompilerUse>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.kohsuke</groupId>
                <artifactId>pgp-maven-plugin</artifactId>
                <version>1.1</version>
                <configuration>
                    <secretkey>keyfile:${main.basedir}/travis/local.secring.asc</secretkey>
                    <passphrase>literal:${gpg.passphrase}</passphrase>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <source>${jdk.version}</source>
                </configuration>
                <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <!-- use package instead of verify to get pgp to sign it -->
                        <phase>package</phase>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <formats>
                        <!-- you can define as many formats as you want, each is independent -->
                        <format>
                            <!-- define the files to apply to -->
                            <includes>
                                <include>*.md</include>
                                <include>.gitignore</include>
                            </includes>
                            <!-- define the steps to apply to those files -->
                            <trimTrailingWhitespace/>
                            <endWithNewline/>
                            <indent>
                                <tabs>true</tabs>
                                <spacesPerTab>4</spacesPerTab>
                            </indent>
                        </format>
                    </formats>
                    <!-- define a language-specific format -->
                    <java>
                        <!-- no need to specify files, inferred automatically, but you can if you want -->

                        <!-- google formatter didn't work with the license header file *shrug* -->
                        <eclipse>
                            <file>${main.basedir}/eclipse-java-formatter.xml</file>
                        </eclipse>

                        <!-- make sure every file has the following copyright header.
                             optionally, Spotless can set copyright years by digging
                             through git history (see "license" section below) -->
                        <licenseHeader>
                            <file>${main.basedir}/license-header</file>
                        </licenseHeader>
                    </java>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-goals</artifactId>
                <version>3.0.0-M3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                  <skipTests>false</skipTests>
                  <argLine>
                      --add-opens=java.base/java.net=ALL-UNNAMED
                      --add-opens=java.base/java.lang=ALL-UNNAMED
                      --add-opens=java.base/java.util=ALL-UNNAMED
                  </argLine>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                  <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
